# fino-ingestor

./: .gitmodules  LICENSE  README.md  pyproject.toml  pyrightconfig.json  pytest.toml  tmp.py
.cursor/rules/: coding.mdc  project.mdc
.cursor/rules/domain/: EDINET_API.mdc  SEC_EDGAR.mdc  disclosure.mdc
.cursor/rules/usecase/: FILING_INGESTOR.mdc  NORMALIZATION_PURPOSE.md
.github/workflows/: lint.yaml  publish.yaml  test.yaml
docs/: PUBLIC_API_DESIGN.md  REQUIRED_ARGUMENT_EXPLANATION.md  STATIC_TYPE_CHECKING_SETUP.md  STORAGE_DESIGN_REVIEW.md  STORAGE_IMPLEMENTATION_SUMMARY.md  TYPE_CHECKING_EXPLANATION.md  features.md  table_of_content.md
docs/sample/: date-test.py  enum-test.py  sample.py  temp-dir-test.py
docs/todo/: usecase.md
src/fino_core/: __init__.py
src/fino_core/application/input/: collect_document.py  list_document.py
src/fino_core/application/interactor/: collect_document.py  list_document.py
src/fino_core/public/: document_collector.py
src/fino_core_archive/: __init__.py
src/fino_core_archive/api/: collect_edinet.py
src/fino_core_archive/factory/: __init__.py  data_source.py  storage.py
src/fino_core_archive/infrastructure/: edinet.py
src/fino_core_archive2/collector/: __init__.py
src/fino_ingestor/: __init__.py
src/fino_ingestor/domain/: model.py
src/fino_ingestor/public/: document_collector.py
src/fino_ingestor/util/: __init__.py  timescope.py
src/sample/: collecter.py
test/util/: test_timescope.py
typings/edinet/: __init__.pyi  main.pyi
typings/edinet/enums/: exceptions.pyi  response.pyi
(+91 files in other folders)
