[project]
name = 'fino-core'
version = '0.1.0'
description = 'Fino Core'
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dynaconf>=3.2.12",
    "pydantic>=2.12.5",
    "python-dateutil>=2.9.0",
    "requests>=2.32.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fino_core"]
